# FilmRecommendation

./: .env.example  .gitignore  Dockerfile.dagster  Dockerfile.spark  Dockerfile.streamlit  README.md  dagster.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  spark-defaults.example.conf  streamlit-requirements.txt  workspace.yaml
config/hive/: hive-site.xml
config/trino/: config.properties  jvm.config
config/trino/catalog/: core-site.xml  delta.properties
docs/: EVALUATION_GUIDE.md
init-db/: create_db.sh
jars/: downloads.sh
pipeline/: definitions.py
pipeline/assets/: bronze.py  evaluate.py  gold.py  ingest.py  silver.py
pipeline/resources/: spark.py
research/: EDA.ipynb
streamlit/: app.py
